updated httpunit and the build file.
git-svn-id: file:///home/dweiss/carrot2/migration/carrot2.svn/trunk@114 7ff1d41c-760d-0410-a7ff-a3a56f310b35